# codex

./: .gitignore  README.md  TJR.spec  TJR_windows.spec  pyproject.toml
.github/workflows/: build-macos-app.yml  build-windows-exe.yml
assets/icons/: TJR.icns
docs/: BACKLOG.md  PROJECT_PLAN.md  ROLE_ROOM.md  START_FROM_ZERO.md  TJR_MACOS_QUICK_START_RU.md  TJR_ONE_PAGER_RU.md
release/: empty-config.json
scripts/: build_mac_app.sh  build_windows_exe.ps1
src/tjr/: __init__.py  __main__.py  main.py
src/tjr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tjr/core/: input_parser.py  logging_setup.py  matching.py  scanner.py
src/tjr/storage/: app_paths.py  config_store.py
src/tjr/ui/: main_window.py  results_window.py  settings_dialog.py  smooth_scroll.py
tests/: test_config_store.py  test_input_parser.py  test_matching.py  test_scanner.py  test_ui_smoke.py
