[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tjr"
version = "0.1.0"
description = "Telegram Job Radar macOS desktop app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PySide6>=6.7.0",
  "Telethon>=1.36.0",
  "pymorphy3>=2.0.2",
  "openpyxl>=3.1.5",
]

[project.scripts]
tjr = "tjr.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
